--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       </div>
     </div>
   </nav>
+  <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
 
   <!-- Hero Section -->
   <div class="hero">
