--- a/team.html
+++ b/team.html
@@ -69,21 +69,21 @@
         <div class="col-md-3">
           <div class="card p-4">
             <h5>OWNER</h5>
-            <p>[ඔයාගේ නම]</p>
+            <p>[⚡☠️]</p>
           </div>
         </div>
 
         <div class="col-md-3">
           <div class="card p-4">
             <h5>ADMIN</h5>
-            <p>[Admin 1]</p>
+            <p>[Kaveesha Dewmina]</p>
           </div>
         </div>
 
         <div class="col-md-3">
           <div class="card p-4">
             <h5>ADMIN</h5>
-            <p>[Admin 2]</p>
+            <p>[pasidu sampath]</p>
           </div>
         </div>
 
