--- a/Registre.html
+++ b/Registre.html
@@ -25,3 +25,30 @@
   </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Register | DEMONS VIP CRYPTO</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
+  <style>
+    body { background-color: #0d0d0d; color: white; }
+    .form-container { max-width: 400px; margin: 80px auto; padding: 30px; background: #1a1a1a; border-radius: 10px; }
+    .form-control { background-color: #111; color: white; }
+    .btn-gold { background-color: gold; color: #000; border: none; }
+    .btn-gold:hover { background-color: #e6c200; }
+  </style>
+</head>
+<body>
+  <div class="form-container text-center">
+    <h2>Register</h2>
+    <form>
+      <input type="text" class="form-control mb-3" placeholder="Username" required>
+      <input type="email" class="form-control mb-3" placeholder="Email" required>
+      <input type="password" class="form-control mb-3" placeholder="Password" required>
+      <button class="btn btn-gold w-100">Register</button>
+    </form>
+    <p class="mt-3">Already have an account? <a href="#">Login</a></p>
+  </div>
+</body>
+</html>
