--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <li class="nav-item"><a class="nav-link" href="vip.html">VIP Packages</a></li>
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <1i class="nav-item"><a class="nav-link" href="team.html">vip team</a></1i>
         </ul>
       </div>
     </div>
