--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
   <style>
     body {
-      background-color: #0d0d0d;
+      background-color: #4CAF50;
       color: white;
       font-family: 'Segoe UI', sans-serif;
     }
@@ -15,7 +15,7 @@
       text-align: center;
     }
     .card {
-      background-color: #1a1a1a;
+      background-color: #4CAF50;
       border: 2px solid gold;
       border-radius: 15px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
