--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-weight: 700;
     }
     .nav-link {
-      color: #f2f2f2 !important;
+      color: #4CAF50 !important;
       font-size: 16px;
       margin-left: 10px;
       transition: color 0.3s;
@@ -44,7 +44,7 @@
       transition: all 0.3s ease;
     }
     .btn-gold:hover {
-      background-color: #ffd700;
+      background-color: #4CAF50;
       transform: scale(1.05);
       box-shadow: 0 0 20px gold;
     }
@@ -58,7 +58,7 @@
     }
     footer {
       background-color: #111;
-      color: #aaa;
+      color: #4CAF50;
       padding: 20px;
       text-align: center;
     }
