--- a/blog.html
+++ b/blog.html
@@ -30,3 +30,74 @@
   </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Blog | DEMONS VIP CRYPTO</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav class="navbar">
+    <div class="logo">DEMONS VIP CRYPTO</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="vip.html">VIP</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="team.html">Team</a></li>
+    </ul>
+  </nav>
+
+  <section class="hero">
+    <h1>Crypto News & Updates</h1>
+    <p>Stay updated with the latest market movements and trading tips</p>
+  </section>
+
+  <section class="features">
+    <div class="package-card">
+      <h2>🔥 July Market Insight</h2>
+      <p>BTC is showing signs of reversal. Key resistance at $72,000.</p>
+    </div>
+    <div class="package-card">
+      <h2>📊 Chart Pattern Strategy</h2>
+      <p>Head & Shoulders vs. Triangle Breakout – what works better?</p>
+    </div>
+  </section>
+
+  <section class="features">
+    <h2 class="section-title">📈 Live Market Updates (Every 4 Hours)</h2>
+
+    <div class="package-card">
+      <h2>BTC / USD</h2>
+      <p>🟢 Bullish Flag forming. Watching $68K breakout zone.</p>
+    </div>
+
+    <div class="package-card">
+      <h2>ETH / USD</h2>
+      <p>🔵 Symmetrical Triangle – break expected soon near $3.4K.</p>
+    </div>
+
+    <div class="package-card">
+      <h2>SOL / USD</h2>
+      <p>🟡 Support bounce near $145, potential short-term rally.</p>
+    </div>
+
+    <div class="package-card">
+      <h2>BNB / USD</h2>
+      <p>🟣 Breakout from wedge – targets $615.</p>
+    </div>
+
+    <div class="package-card">
+      <h2>XRP / USD</h2>
+      <p>🔴 Consolidating after dump – sideways range under $0.55.</p>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 DEMONS VIP CRYPTO | All Rights Reserved.
+  </footer>
+</body>
+</html>
