--- a/blog.html
+++ b/blog.html
@@ -101,3 +101,31 @@
   </footer>
 </body>
 </html>
+<section class="features">
+  <h2 class="section-title">📊 Live Market Charts</h2>
+
+  <div class="chart-box">
+    <h3>BTC / USDT</h3>
+    <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=BINANCE:BTCUSDT&locale=en" width="100%" height="220" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+  </div>
+
+  <div class="chart-box">
+    <h3>ETH / USDT</h3>
+    <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=BINANCE:ETHUSDT&locale=en" width="100%" height="220" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+  </div>
+
+  <div class="chart-box">
+    <h3>SOL / USDT</h3>
+    <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=BINANCE:SOLUSDT&locale=en" width="100%" height="220" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+  </div>
+
+  <div class="chart-box">
+    <h3>BNB / USDT</h3>
+    <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=BINANCE:BNBUSDT&locale=en" width="100%" height="220" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+  </div>
+
+  <div class="chart-box">
+    <h3>XRP / USDT</h3>
+    <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=BINANCE:XRPUSDT&locale=en" width="100%" height="220" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+  </div>
+</section>
