--- a/login.html
+++ b/login.html
@@ -35,3 +35,22 @@
   </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Login | DEMONS VIP</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <section class="hero">
+    <h1>Admin Login</h1>
+    <form style="max-width: 400px; margin: auto;">
+      <input type="text" placeholder="Username" class="form-input"><br><br>
+      <input type="password" placeholder="Password" class="form-input"><br><br>
+      <button type="submit" class="btn-glow">Login</button>
+    </form>
+  </section>
+</body>
+</html>
