--- a/Registre.html
+++ b/Registre.html
@@ -1,54 +1,37 @@
-
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Register | DEMONS VIP CRYPTO</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
-  <style>
-    body { background-color: #0d0d0d; color: white; }
-    .form-container { max-width: 400px; margin: 80px auto; padding: 30px; background: #1a1a1a; border-radius: 10px; }
-    .form-control { background-color: #111; color: white; }
-    .btn-gold { background-color: gold; color: #000; border: none; }
-    .btn-gold:hover { background-color: #e6c200; }
-  </style>
-</head>
-<body>
-  <div class="form-container text-center">
-    <h2>Register</h2>
-    <form>
-      <input type="text" class="form-control mb-3" placeholder="Username" required>
-      <input type="email" class="form-control mb-3" placeholder="Email" required>
-      <input type="password" class="form-control mb-3" placeholder="Password" required>
-      <button class="btn btn-gold w-100">Register</button>
-    </form>
-    <p class="mt-3">Already have an account? <a href="#">Login</a></p>
-  </div>
-</body>
-</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Register | DEMONS VIP CRYPTO</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
-  <style>
-    body { background-color: #0d0d0d; color: white; }
-    .form-container { max-width: 400px; margin: 80px auto; padding: 30px; background: #1a1a1a; border-radius: 10px; }
-    .form-control { background-color: #111; color: white; }
-    .btn-gold { background-color: gold; color: #000; border: none; }
-    .btn-gold:hover { background-color: #e6c200; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Panel | DEMONS VIP</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="form-container text-center">
-    <h2>Register</h2>
-    <form>
-      <input type="text" class="form-control mb-3" placeholder="Username" required>
-      <input type="email" class="form-control mb-3" placeholder="Email" required>
-      <input type="password" class="form-control mb-3" placeholder="Password" required>
-      <button class="btn btn-gold w-100">Register</button>
-    </form>
-    <p class="mt-3">Already have an account? <a href="#">Login</a></p>
-  </div>
+  <nav class="navbar">
+    <div class="logo">Admin Panel</div>
+    <ul class="nav-links">
+      <li><a href="#">Dashboard</a></li>
+      <li><a href="#">VIP Plans</a></li>
+      <li><a href="#">News Posts</a></li>
+      <li><a href="#">Users</a></li>
+      <li><a href="#">Logout</a></li>
+    </ul>
+  </nav>
+
+  <section class="features">
+    <h2 class="section-title">Welcome, Admin!</h2>
+    <div class="package-card">
+      <h2>Total Members</h2>
+      <p>53</p>
+    </div>
+    <div class="package-card">
+      <h2>Pending Orders</h2>
+      <p>4</p>
+    </div>
+    <div class="package-card">
+      <h2>Active VIPs</h2>
+      <p>29</p>
+    </div>
+  </section>
 </body>
 </html>
