--- a/vip.html
+++ b/vip.html
@@ -39,3 +39,22 @@
   </div>
 </body>
 </html>
+<section class="features">
+  <h2 class="section-title">Choose Your VIP Package</h2>
+
+  <div class="cards-container" style="display: flex; justify-content: center; flex-wrap: wrap;">
+    <div class="package-card">
+      <h3>Monthly VIP</h3>
+      <p>$10/month</p>
+      <p>Access to live signals, charts & analysis</p>
+      <a href="#" class="btn-glow">Buy Now</a>
+    </div>
+
+    <div class="package-card">
+      <h3>Lifetime VIP</h3>
+      <p>$30 (One-time)</p>
+      <p>Unlimited access to all VIP features</p>
+      <a href="#" class="btn-glow">Buy Now</a>
+    </div>
+  </div>
+</section>
