--- a/vip.html
+++ b/vip.html
@@ -9,10 +9,10 @@
   <title>VIP Packages | DEMONS VIP CRYPTO</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
   <style>
-    body { background-color: #0d0d0d; color: white; }
-    .card { background-color: #1a1a1a; border: 1px solid gold; }
+    body { background-color: ffffff; color: white; }
+    .card { background-color: ffffff; border: 1px solid gold; }
     .btn-buy { background-color: gold; color: #000; }
-    .btn-buy:hover { background-color: #e6c200; }
+    .btn-buy:hover { background-color:color: #ffffff;; }
   </style>
 </head>
 <body>
@@ -41,20 +41,3 @@
 </html>
 <section class="features">
   <h2 class="section-title">Choose Your VIP Package</h2>
-
-  <div class="cards-container" style="display: flex; justify-content: center; flex-wrap: wrap;">
-    <div class="package-card">
-      <h3>Monthly VIP</h3>
-      <p>$10/month</p>
-      <p>Access to live signals, charts & analysis</p>
-      <a href="#" class="btn-glow">Buy Now</a>
-    </div>
-
-    <div class="package-card">
-      <h3>Lifetime VIP</h3>
-      <p>$30 (One-time)</p>
-      <p>Unlimited access to all VIP features</p>
-      <a href="#" class="btn-glow">Buy Now</a>
-    </div>
-  </div>
-</section>
