--- a/vip.html
+++ b/vip.html
@@ -1,43 +1,18 @@
 
-<style>
-  .border-gold { border: 2px solid gold; }
-  .text-gold { color: gold; }
-</style>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>VIP Packages | DEMONS VIP CRYPTO</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
-  <style>
-    body { background-color: ffffff; color: white; }
-    .card { background-color: ffffff; border: 1px solid gold; }
-    .btn-buy { background-color: gold; color: #000; }
-    .btn-buy:hover { background-color:color: #ffffff;; }
-  </style>
-</head>
-<body>
-  <div class="container text-center my-5">
-    <h2 class="text-warning">Choose Your VIP Package</h2>
-    <div class="row mt-4 justify-content-center">
-      <div class="col-md-4">
-        <div class="card p-4 mb-4">
-          <h3>Monthly VIP</h3>
-          <p>$10/month</p>
-          <p>Access to live signals, charts & analysis</p>
-          <button class="btn btn-buy" onclick="alert('Redirecting to buy Monthly VIP...')">Buy Now</button>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card p-4 mb-4">
-          <h3>Lifetime VIP</h3>
-          <p>$30 (One-time)</p>
-          <p>Unlimited lifetime access to all features</p>
-          <button class="btn btn-buy" onclick="alert('Redirecting to buy Lifetime VIP...')">Buy Now</button>
-        </div>
-      </div>
-    </div>
+<div class="vip-section" style="text-align: center; color: #ffffff;">
+  <h2>VIP Package</h2>
+
+  <div class="vip-option">
+    <h3>Monthly VIP</h3>
+    <p>10/month</p>
+    <p>Access to live signals, charts     analysis</p>
+    <a href="#" style="color: #1E90FF;">Buy Now</a>
   </div>
-</body>
-</html>
-<section class="features">
-  <h2 class="section-title">Choose Your VIP Package</h2>
+
+  <div class="vip-option">
+    <h3>Lifetime VIP</h3>
+    <p>30 (One-time)</p>
+    <p>Unlimited access to all VIP features</p>
+    <a href="#" style="color: #1E90FF;">Buy Now</a>
+  </div>
+</div>
