--- a/vip.html
+++ b/vip.html
@@ -16,3 +16,23 @@
     <a href="#" style="color: #1E90FF;">Buy Now</a>
   </div>
 </div>
+
+
+
+<div style="color: #ffffff;">
+  <h2>VIP Package</h2>
+
+  <div>
+    <h3>Monthly VIP</h3>
+    <p>10/month</p>
+    <p>Access to live signals, charts     analysis</p>
+    <a href="#" style="color: #ffffff;">Buy Now</a>
+  </div>
+
+  <div>
+    <h3>Lifetime VIP</h3>
+    <p>30 (One-time)</p>
+    <p>Unlimited access to all VIP features</p>
+    <a href="#" style="color: #ffffff;">Buy Now</a>
+  </div>
+</div>.
