--- a/vip.html
+++ b/vip.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
   <style>
     body {
-background-color: #ffffff;
-color: #000000;
+background-color: #000000;
+color:#ffffff;  
       color: white;
       font-family: 'Poppins', sans-serif;
     }
