--- a/vip.html
+++ b/vip.html
@@ -93,3 +93,84 @@ color:#ffffff;
 
 </body>
 </html>
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Order VIP Package</title>
+  <style>
+    body {
+      background-color: #0d0d0d;
+      color: white;
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      padding: 40px;
+    }
+
+    form {
+      background-color: #1a1a1a;
+      border: 2px solid gold;
+      padding: 30px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 500px;
+      margin: auto;
+      box-shadow: 0 0 15px rgba(255,215,0,0.2);
+    }
+
+    input, textarea, select {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      border-radius: 8px;
+      border: none;
+      background-color: #333;
+      color: white;
+    }
+
+    .btn-submit {
+      margin-top: 20px;
+      background-color: gold;
+      color: black;
+      border: none;
+      padding: 12px 30px;
+      border-radius: 30px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn-submit:hover {
+      background-color: #e6c200;
+      box-shadow: 0 0 20px gold;
+    }
+  </style>
+</head>
+<body>
+  <h2>Order Your VIP Package</h2>
+  <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <input type="text" name="name" placeholder="Your Full Name" required>
+    <input type="email" name="email" placeholder="Your Email or Telegram" required>
+    <select name="package">
+      <option value="Monthly VIP - $10">Monthly VIP - $10</option>
+      <option value="Lifetime VIP - $30">Lifetime VIP - $30</option>
+    </select>
+    <textarea name="note" placeholder="Paste payment proof or message (optional)"></textarea>
+    <button type="submit" class="btn-submit">Submit Order</button>
+  </form>
+</body>
+</html>
+
+
+
+
+
+<button class="btn btn-buy mt-3" onclick="window.location.href='order.html'">
+  Buy Now
+</button>
+
