--- a/team.html
+++ b/team.html
@@ -68,29 +68,29 @@
 
         <div class="col-md-3">
           <div class="card p-4">
-            <h5>OWNER</h5>
-            <p>[⚡☠️]</p>
+            <h5>OWner</h5>
+            <p>Kaveesha Devmina</p>
           </div>
         </div>
 
         <div class="col-md-3">
           <div class="card p-4">
             <h5>ADMIN</h5>
-            <p>[Kaveesha Dewmina]</p>
+            <p>Kaveesha Dewmina</p>
           </div>
         </div>
 
         <div class="col-md-3">
           <div class="card p-4">
             <h5>ADMIN</h5>
-            <p>[pasidu sampath]</p>
+            <p>pasidu sampath</p>
           </div>
         </div>
 
         <div class="col-md-3">
           <div class="card p-4">
             <h5>ADMIN</h5>
-            <p>[Admin 3]</p>
+            <p>[up coming soon ]</p>
           </div>
         </div>
 
