--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
         <div class="col-md-3">
           <div class="card p-4">
             <h5>OWner</h5>
-            <p>Kaveesha Devmina</p>
+            <p>Kaveesha Dewmina</p>
           </div>
         </div>
 
@@ -102,5 +102,25 @@
     &copy; 2025 DEMONS VIP CRYPTO – All rights reserved.
   </footer>
 
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Blue Background Example</title>
+<style>
+  body {
+    background-color: #007bff; /* නිල් පාට */
+    color: white; /* අකුරු සුදු */
+    font-family: Arial, sans-serif;
+    padding: 20px;
+  }
+</style>
+</head>
+<body>
+  <h1></h1>
+  <p></p>
 </body>
 </html>
