--- a/blog.html
+++ b/blog.html
@@ -129,3 +129,38 @@
     <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=BINANCE:XRPUSDT&locale=en" width="100%" height="220" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
   </div>
 </section>
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Color Flash Background</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    color: white;
+    padding: 20px;
+    animation: colorFlash 6s infinite;
+  }
+
+  @keyframes colorFlash {
+    0%   { background-color: #007bff; } /* නිල් */
+    33%  { background-color: #dc3545; } /* රතු */
+    66%  { background-color: #28a745; } /* කොළ */
+    100% { background-color: #6f42c1; } /* දම් */
+  }
+</style>
+</head>
+<body>
+  <h1></h1>
+  <p></p>
+</body>
+</html>
