--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <li class="nav-item"><a class="nav-link" href="vip.html">VIP Packages</a></li>
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li> 
+        <li class="nav-item"><a class="nav-link" href=adming login.html">adming loging </a></li>
       </ul>
     </div>
   </nav>
