--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
         <div class="col-md-3">
           <div class="card p-4">
             <h5>OWner</h5>
-            <p>Kaveesha Dewmina</p>
+            <p>Janitha malaka mallawaarachchi</p>
           </div>
         </div>
 
