--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li> 
-         <li class"nav-item"><a class="nav-link" href="devolopar.html">devolopar</a>1i>
+         <li class="nav-item"><a class="nav-link" href="devolopar.html">devolopar</a>1i>
       </ul>
     </div>
   </nav>
