--- a/devolopar.html
+++ b/devolopar.html
@@ -138,3 +138,90 @@
   <button>Start on WhatsApp</button>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Rainbow Glow Box</title>
+<style>
+  .container {
+    width: 400px;
+    margin: 50px auto;
+    padding: 30px;
+    background: #164b4b;
+    border-radius: 15px;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    animation: rainbowGlow 5s linear infinite;
+  }
+
+  @keyframes rainbowGlow {
+    0% {
+      box-shadow:
+        0 0 10px red,
+        0 0 20px orange,
+        0 0 30px yellow,
+        0 0 40px green,
+        0 0 50px blue,
+        0 0 60px indigo,
+        0 0 70px violet;
+    }
+    25% {
+      box-shadow:
+        0 0 10px orange,
+        0 0 20px yellow,
+        0 0 30px green,
+        0 0 40px blue,
+        0 0 50px indigo,
+        0 0 60px violet,
+        0 0 70px red;
+    }
+    50% {
+      box-shadow:
+        0 0 10px yellow,
+        0 0 20px green,
+        0 0 30px blue,
+        0 0 40px indigo,
+        0 0 50px violet,
+        0 0 60px red,
+        0 0 70px orange;
+    }
+    75% {
+      box-shadow:
+        0 0 10px green,
+        0 0 20px blue,
+        0 0 30px indigo,
+        0 0 40px violet,
+        0 0 50px red,
+        0 0 60px orange,
+        0 0 70px yellow;
+    }
+    100% {
+      box-shadow:
+        0 0 10px red,
+        0 0 20px orange,
+        0 0 30px yellow,
+        0 0 40px green,
+        0 0 50px blue,
+        0 0 60px indigo,
+        0 0 70px violet;
+    }
+  }
+</style>
+</head>
+<body>
+
+<div class="container">
+  <h2>Developer Details</h2>
+  <p><strong>Pasidu Sampath</strong></p>
+  <p>PASIYA-MD TEAM OWNER</p>
+  <p>Fullstack Developer</p>
+  <p>Software & Cyber Security Engineer</p>
+</div>
+
+</body>
+</html>
