--- a/devolopar.html
+++ b/devolopar.html
@@ -39,7 +39,7 @@
     }
 
     h2 {
-      color: #00ff99;
+      color: #000000;
       margin-top: 0;
     }
 
@@ -54,7 +54,7 @@
     }
 
     a {
-      color: #00d9ff;
+      color:#000000
       text-decoration: none;
     }
 
