--- a/devolopar.html
+++ b/devolopar.html
@@ -7,7 +7,59 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
-  
+  margin: 0;
+      font-family: 'Orbitron', sans-serif;
+      background: linear-gradient(135deg, #001f3f, #0074D9);
+      color: #fff;
+      animation: backgroundShift 10s infinite alternate;
+    }
+
+    @keyframes backgroundShift {
+      20% { background: #001f3f; }
+      40% { background: #0074D9; }
+      60% { background: #39CCCC; }
+      80% { background: #3D9970; }
+      100% { background: #001f3f; }
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 80px auto;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+    }
+
+    h1 {
+      color: cyan;
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      color: #00ff99;
+      margin-top: 0;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 10px 0;
+    }
+
+    .contact {
+      color: yellow;
+      margin-top: 20px;  
+    }
+
+    a {
+      color: #00d9ff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration:
     }
   </style>
 </head>
@@ -28,7 +80,6 @@
     </p>
     <p>Website: <a href="https://pasiya-md-web.vercel.app" target="_blank">pasiya-md-web.vercel.app</a></p>
   </div>
-
 </body>
 </html>
 <!DOCTYPE html>
