--- a/devolopar.html
+++ b/devolopar.html
@@ -94,11 +94,22 @@
     <div class="skills">
       <h3>🔧 My Skills:</h3>
       <ul>
-        <li>Full-stack Developer</li>
-        <li>Software Engineering</li>
-        <li>Cyber Security Engineer</li>
-        <li>UI/UX Web Designing</li>
-        <li>WhatsApp Bot Development</li>
+      opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2>💼 My Skills</h2>
+    <div class="skill">Full-stack Developer</div>
+    <div class="skill">Software Engineering</div>
+    <div class="skill">Cyber Security Engineer</div>
+    <div class="skill">UI/UX Web Designing</div>
+    <div class="skill">WhatsApp Bot Development</div>
+  </div>
+</body>
       </ul>
     </div>
   </div>
