--- a/devolopar.html
+++ b/devolopar.html
@@ -50,27 +50,31 @@
     color: #00bfff;
     font-weight: 600;
   }
-  .skills {
+  .skills-container {
+    margin-top: 30px;
+  }
+  .skill-box {
     background-color: #333;
     border-radius: 12px;
     padding: 15px;
-    margin-top: 30px;
-    animation: fadeSlideIn 1.5s ease forwards;
+    margin-bottom: 15px;
     opacity: 0;
     transform: translateY(20px);
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
   }
-  .skills h3 {
+  .skill-box:nth-child(1) { animation-name: fadeSlideIn; animation-delay: 0.2s;}
+  .skill-box:nth-child(2) { animation-name: fadeSlideIn; animation-delay: 0.4s;}
+  .skill-box:nth-child(3) { animation-name: fadeSlideIn; animation-delay: 0.6s;}
+  .skill-box:nth-child(4) { animation-name: fadeSlideIn; animation-delay: 0.8s;}
+  .skill-box:nth-child(5) { animation-name: fadeSlideIn; animation-delay: 1s;}
+  .skill-box h3 {
     color: #d0f;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
   }
-  .skills ul {
-    list-style: none;
-    padding: 0;
+  .skill-box p {
     color: #ccc;
-    text-align: left;
-  }
-  .skills ul li {
-    margin: 6px 0;
+    margin: 0;
   }
   @keyframes fadeSlideIn {
     to {
@@ -90,18 +94,28 @@
     
     <p class="email">Email: <a href="mailto:pasidusampath730@gmail.com" style="color:#00bfff;">pasidusampath730@gmail.com</a></p>
     
-    <div class="skills">
-      <h3>🧰 My Skills:</h3>
-      <ul>
-        <li>💻 Full-stack Developer</li>
-        <li>💻 Software Engineering</li>
-        <li>💻 Cyber Security Engineer</li>
-        <li>💻 UI/UX Web Designing</li>
-        <li>💻 WhatsApp Bot Development</li>
-      </ul>
+    <div class="skills-container">
+      <div class="skill-box">
+        <h3>💻 Full-stack Developer</h3>
+        <p>Building complete web applications</p>
+        </div>
+      <div class="skill-box">
+        <h3>🛠 Software Engineering</h3>
+        <p>Designing efficient software solutions</p>
+      </div>
+      <div class="skill-box">
+        <h3>🔒 Cyber Security Engineer</h3>
+        <p>Protecting systems and data</p>
+      </div>
+      <div class="skill-box">
+        <h3>🎨 UI/UX Web Designing</h3>
+        <p>Creating user-friendly interfaces</p>
+      </div>
+      <div class="skill-box">
+        <h3>🤖 WhatsApp Bot Development</h3>
+        <p>Automating WhatsApp interactions</p>
+      </div>
     </div>
   </div>
 </body>
 </html>
-```
-  
