--- a/devolopar.html
+++ b/devolopar.html
@@ -215,3 +215,38 @@
     0%, 100% { background-color: #9b59b6; }
     50% { background-color: #8e44ad; }
   }
+
+
+
+
+
+
+  
+.skill-box {
+  opacity: 0;
+  transform: scale(0.8);
+  animation: fadeScaleIn 0.7s ease forwards;
+}
+
+.skill-box:nth-child(1) {
+  animation-delay: 0.2s;
+}
+.skill-box:nth-child(2) {
+  animation-delay: 0.4s;
+}
+.skill-box:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.skill-box:nth-child(4) {
+  animation-delay: 0.8s;
+}
+.skill-box:nth-child(5) {
+  animation-delay: 1s;
+}
+
+@keyframes fadeScaleIn {
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
