--- a/devolopar.html
+++ b/devolopar.html
@@ -126,119 +126,85 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Skills Animation</title>
 <style>
-  body {
-    background: #111;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
-    display: flex;
-    justify-content: center;
-    padding: 50px;
-  }
-  .skills-container {
-    width: 320px;
-  }
-  .skill-box {
-    background-color: #333;
-    border-radius: 12px;
-    padding: 20px;
-    margin-bottom: 20px;
-    opacity: 0;
-    transform: translateY(20px);
-    animation-fill-mode: forwards;
-    animation-duration: 1s;
-    animation-name: fadeSlideIn;
-    animation-delay: var(--delay);
-    animation-timing-function: ease-out;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    font-size: 18px;
-    font-weight: 600;
-    text-align: center;
-    color: white;
-    box-shadow: 0 0 12px rgba(0,0,0,0.4);
-  }
-  .skill-box:nth-child(1) {
-    --delay: 0.2s;
-    animation-name: fadeSlideIn, colorShift1;
-    animation-duration: 1s, 4s;
-    animation-iteration-count: 1, infinite;
-  }
-  .skill-box:nth-child(2) {
-    --delay: 0.4s;
-    animation-name: fadeSlideIn, colorShift2;
-    animation-duration: 1s, 4s;
-    animation-iteration-count: 1, infinite;
+  body 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>PASIYA-MD TEAM</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-  .skill-box:nth-child(3) {
-    --delay: 0.6s;
-    animation-name: fadeSlideIn, colorShift3;
-    animation-duration: 1s, 4s;
-    animation-iteration-count: 1, infinite;
-  }
-  .skill-box:nth-child(4) {
-    --delay: 0.8s;
-    animation-name: fadeSlideIn, colorShift4;
-    animation-duration: 1s, 4s;
-    animation-iteration-count: 1, infinite;
-  }
-  .skill-box:nth-child(5) {
-    --delay: 1s;
-    animation-name: fadeSlideIn, colorShift5;
-    animation-duration: 1s, 4s;
-    animation-iteration-count: 1, infinite;
-  }
 
-  @keyframes fadeSlideIn {
-    to {
-      opacity: 1;
-      transform: translateY(0);
+    body {
+      background-color: #111;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      overflow: hidden;
+      position: relative;
     }
-  }
-  @keyframes colorShift1 {
-    0%, 100% { background-color: #e74c3c; }
-    50% { background-color: #f39c12; }
-  }
-  @keyframes colorShift2 {
-    0%, 100% { background-color: #3498db; }
-    50% { background-color: #9b59b6; }
-  }
-  @keyframes colorShift3 {
-    0%, 100% { background-color: #2ecc71; }
-    50% { background-color: #1abc9c; }
-  }
-  @keyframes colorShift4 {
-    0%, 100% { background-color: #e67e22; }
-    50% { background-color: #d35400; }
-  }
-  @keyframes colorShift5 {
-    0%, 100% { background-color: #9b59b6; }
-    50% { background-color: #8e44ad; }
-  }
-.skill-box {
-  opacity: 0;
-  transform: scale(0.8);
-  animation: fadeScaleIn 0.7s ease forwards;
-}
 
-.skill-box:nth-child(1) {
-  animation-delay: 0.2s;
-}
-.skill-box:nth-child(2) {
-  animation-delay: 0.4s;
-}
-.skill-box:nth-child(3) {
-  animation-delay: 0.6s;
-}
-.skill-box:nth-child(4) {
-  animation-delay: 0.8s;
-}
-.skill-box:nth-child(5) {
-  animation-delay: 1s;
-}
+    .snake {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+    }
 
-@keyframes fadeScaleIn {
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
+    .snake span {
+      position: absolute;
+      display: block;
+      width: 200px;
+      height: 10px;
+      background: linear-gradient(90deg, #f0f, #0ff, #0f0, #ff0);
+      background-size: 400% 100%;
+      animation: colorChange 4s linear infinite, glow 2s ease-in-out infinite alternate;
+    }
+
+    .snake span::before {
+      content: "PASIYA-MD TEAM";
+      position: absolute;
+      top: -25px;
+      width: 100%;
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    @keyframes colorChange {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 100% 50%; }
+    }
+
+    @keyframes glow {
+      0% { box-shadow: 0 0 5px #0ff, 0 0 10px #f0f; }
+      100% { box-shadow: 0 0 20px #0f0, 0 0 30px #ff0; }
+    }
+
+    /* Path animation */
+    .snake span {
+      animation-name: moveAround, colorChange, glow;
+      animation-duration: 10s, 4s, 2s;
+      animation-timing-function: linear, linear, ease-in-out;
+      animation-iteration-count: infinite;
+    }
+
+    @keyframes moveAround {
+      0%   { top: 0; left: 0; transform: rotate(0deg); }
+      25%  { top: 0; left: calc(100% - 200px); transform: rotate(90deg); }
+      50%  { top: calc(100% - 10px); left: calc(100% - 200px); transform: rotate(180deg); }
+      75%  { top: calc(100% - 10px); left: 0; transform: rotate(270deg); }
+      100% { top: 0; left: 0; transform: rotate(360deg); }
+    }
+  </style>
+</head>
+<body>
+  <div class="snake">
+    <span></span>
+  </div>
+</body>
+</html>
