--- a/devolopar.html
+++ b/devolopar.html
@@ -208,3 +208,80 @@
   </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>PASIYA-MD TEAM</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      background-color: #111;
+      color: white;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      overflow: hidden;
+      position: relative;
+    }
+    .border-line {
+      position: absolute;
+      background: linear-gradient(90deg, #ff00ff, #00ffff, #00ff00, #ffff00);
+      background-size: 300% 300%;
+      animation: animateColors 5s linear infinite;
+    }
+    .top, .bottom {
+      height: 5px;
+      width: 100%;
+    }
+    .left, .right {
+      width: 5px;
+      height: 100%;
+    }
+    .top {
+      top: 0;
+      left: 0;
+    }
+    .bottom {
+      bottom: 0;
+      left: 0;
+    }
+    .left {
+      top: 0;
+      left: 0;
+    }
+    .right {
+      top: 0;
+      right: 0;
+    }
+    @keyframes animateColors {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+    .team-name {
+      position: absolute;
+      top: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 18px;
+      color: #0ff;
+      animation: glow 1.5s ease-in-out infinite alternate;
+    }
+  @keyframes glow {
+      0% { text-shadow: 0 0 5px #0ff, 0 0 10px #f0f; }
+      100% { text-shadow: 0 0 20px #0f0, 0 0 30px #ff0; }
+    }
+  </style>
+</head>
+<body>
+  <div class="border-line top"></div>
+  <div class="border-line bottom"></div>
+  <div class="border-line left"></div>
+  <div class="border-line right"></div>
+  <div class="team-name">🐍 PASIYA-MD TEAM 🐍</div>
+</body>
+</html>
