--- a/devolopar.html
+++ b/devolopar.html
@@ -285,3 +285,79 @@
   <div class="team-name">🐍 PASIYA-MD TEAM 🐍</div>
 </body>
 </html>
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Snake Text Animation</title>
+<style>
+  body {
+    background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    font-family: 'Arial Black', sans-serif;
+  }
+  .snake-container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+  }
+  .snake-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 36px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 12px;
+    transform-origin: center center;
+    animation: rotate 8s linear infinite;
+  }
+  .snake-text span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform-origin: 0 0;
+    color: white;
+    animation: colorShift 8s linear infinite;
+  }
+  .snake-text span:nth-child(1) { transform: rotate(0deg) translate(120px) rotate(0deg); animation-delay: 0s;}
+  .snake-text span:nth-child(2) { transform: rotate(51.4deg) translate(120px) rotate(-51.4deg); animation-delay: 1s;}
+  .snake-text span:nth-child(3) { transform: rotate(102.8deg) translate(120px) rotate(-102.8deg); animation-delay: 2s;}
+  .snake-text span:nth-child(4) { transform: rotate(154.2deg) translate(120px) rotate(-154.2deg); animation-delay: 3s;}
+  .snake-text span:nth-child(5) { transform: rotate(205.6deg) translate(120px) rotate(-205.6deg); animation-delay: 4s;}
+  .snake-text span:nth-child(6) { transform: rotate(257deg) translate(120px) rotate(-257deg); animation-delay: 5s;}
+  .snake-text span:nth-child(7) { transform: rotate(308.4deg) translate(120px) rotate(-308.4deg); animation-delay: 6s;}
+
+  @keyframes rotate {
+    0% { transform: translate(-50%, -50%) rotate(0deg);}
+    100% { transform: translate(-50%, -50%) rotate(360deg);}
+  }
+  @keyframes colorShift {
+    0%, 100% { color: #39ff14; }
+    33% { color: #ff4136; }
+    66% { color: #0074D9; }
+  }
+</style>
+</head>
+<body>
+  <div class="snake-container">
+    <div class="snake-text">
+      <span>P</span>
+      <span>A</span>
+      <span>S</span>
+      <span>I</span>
+      <span>Y</span>
+      <span>A</span>
+      <span>-</span>
+    </div>
+  </div>
+</body>
+</html>
+```
