--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li> 
-         <li class="nav-item"><a class="nav-link" href="devolopar.html">devolopar</a></li
+        <li class="nav-item"><a class="nav-link" href="devolopar.html">devolopar</a></li   
+        <li class="nav-item"><a class="nav-link" href="free-signals.html">Free Signals</a></li>
+        <li class="nav-item"><a class="nav-link" href="vip-signals.html">VIP Access</a></li>
+       <li class="nav-item" ><a class="nav-link" href="admin.html">Admin</a></li>                                               
       </ul>
     </div>
   </nav>
