--- a/free-signals.html
+++ b/free-signals.html
@@ -29,7 +29,7 @@
   </section>
 
   <footer>
-    <p>© 2025 DEMONS VIP CRYPTO | FULSTRK Developer</p>
+    <p>© 2025 DEMONS VIP CRYPTO | PASIYA Developer</p>
   </footer>
 
 </body>
