--- a/vip-signals.html
+++ b/vip-signals.html
@@ -36,7 +36,7 @@
   </section>
 
   <footer>
-    <p>© 2025 DEMONS VIP CRYPTO | VIP Area by FULSTRK</p>
+    <p>© 2025 DEMONS VIP CRYPTO | VIP Area by PASIYA</p>
   </footer>
 
 </body>
